syntax = "proto3";


option java_multiple_files = true;
option java_package = "java.simple.helloworld";
option java_outer_classname = "HelloWorldProto";


// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}
  
// The response message containing the greetings
message HelloResponse {
    string message = 1;
}


service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
};